--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
 				<button class="btn btn-primary convert m-2" type="submit">
 					Convert
 				</button>
+				<!-- reset button -->
+		
 			</div>
 
 		</div>
@@ -190,6 +192,13 @@
 	</div>
 
 	<!-- linking script.js file -->
-	<script src="script.js"></script>
+	<script src="main.js"></script>
+  <hr>
+  <br>
+   <br> <br> <br> <br> <br><br>
+  <h7>Developed By - Akshara Sagar Dhoble</h7>
+ 
+  <br>
+  
 </body>
 </html>
